--- a/index.html
+++ b/index.html
@@ -1,47 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <!-- Outros elementos do cabeçalho aqui -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY9i5XOmJFzF7qU6z3Iehbo1W8sF+JHXn0Nn" crossorigin="anonymous">
-  </head>
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY9i5XOmJFzF7qU6z3Iehbo1W8sF+JHXn0Nn" crossorigin="anonymous">
+    <title>Ícones & Segurança</title>
+    <!-- Inclua a biblioteca Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
-      /* Adicione estilos personalizados aqui */
-      body {
-        font-family: 'Arial', sans-serif;
-      }
-  
-      ul {
-        list-style: none;
-        padding: 0;
-      }
-  
-      li {
-        margin-bottom: 10px;
-      }
-  
-      .security-item {
-        display: flex;
-        align-items: center;
-      }
-  
-      .security-icon {
-        margin-right: 10px;
-        font-size: 1.5em;
-      }
+        /* Estilize a lista com ícones */
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        /* Adicione cor e estilo aos ícones */
+        .security-icon {
+            color: #3498db; /* Cor azul */
+            margin-right: 10px;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
+
+    <h1>Medidas de Segurança</h1>
+    
     <ul>
-      <li class="security-item"><i class="fas fa-shield-alt security-icon"></i> Firewall</li>
-      <li class="security-item"><i class="fas fa-lock security-icon"></i> Criptografia</li>
-      <li class="security-item"><i class="fas fa-camera security-icon"></i> Vigilância por vídeo</li>
-      <li class="security-item"><i class="fas fa-key security-icon"></i> Autenticação de dois fatores</li>
+        <li><i class="fas fa-shield-alt security-icon"></i> Firewall</li>
+        <li><i class="fas fa-virus security-icon"></i> Antivírus</li>
+        <li><i class="fas fa-lock security-icon"></i> Criptografia</li>
+        <li><i class="fas fa-video security-icon"></i> Vigilância por câmeras</li>
+        <!-- Adicione mais itens conforme necessário -->
     </ul>
-  </body>
-  </html>
-  
-  
+
+</body>
+</html>
